[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="gem_container" type="Node" parent="."]

[node name="HUD" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="HUD"]
margin_left = 14.0344
margin_top = 27.4846
margin_right = 70.0344
margin_bottom = 41.4846
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="HUD"]
margin_left = 14.8897
margin_top = 3.93759
margin_right = 25.8897
margin_bottom = 17.9376
text = "0"

[node name="game_over_label" type="Label" parent="HUD"]
margin_left = 11.939
margin_top = 52.8024
margin_right = 87.939
margin_bottom = 66.8024
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true
[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
